src/objects/Freshbooks_Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Freshbooks_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Freshbooks Project</label>
        <referenceTo>Freshbooks_Project__c</referenceTo>
        <relationshipLabel>Freshbooks Time Entries</relationshipLabel>
        <relationshipName>Freshbooks_Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Freshbooks_Time_Entry_ID__c</fullName>
        <externalId>true</externalId>
        <label>Freshbooks Time Entry ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Freshbooks Time Entry</label>
    <nameField>
        <label>Freshbooks Time Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freshbooks Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>